/*
    Generate Go file
    docker run --rm -v $(pwd):/dir -w "/dir" grpc/go protoc swagger-http.proto --go_out=plugins=grpc:.
*/
syntax = "proto3";

option java_package = "SwaggerHTTPGRPC";
option java_outer_classname = "SwaggerHTTPGRPC";
option objc_class_prefix = "SWGRPC";

package SwaggerHTTPGRPC;

// The Workers service definition.
service Workers {
    // Work on a Request
    rpc DoRequest (Request) returns (Response) {}
}

message Request {
    string url = 1;
    map<string, string> headers = 2;
    string method = 3;
    string body = 4;
}

message Response {
    bool ok = 1;
    string url = 2;
    int32 status = 3;
    string statusText = 4;
    string body = 5;
    map<string, Header> headers = 6;
}

message Header {
    repeated string value = 1;
}